# CS5850-2D-Shooting-Game

./: .gitignore  CMakeLists.txt  README.md  high_score.json  run.ps1  run.sh  test.sh
GameAssets/: GameData.json
assets/: GameData.json
include/: GameEngine.hpp
main/: main.cpp
src/: main.cpp
src/game/: GameColor.hpp  GameEngine.cpp  GameEngine.hpp  GameWorld.cpp  GameWorld.hpp  HUD.cpp  HUD.hpp  Timer.cpp  Timer.hpp
src/game/ecs/: Component.hpp  ComponentManager.hpp  Entity.hpp  System.cpp  System.hpp  SystemManager.hpp  Vector2.hpp
src/game/ecs/components/: Collision.cpp  Collision.hpp  CollisionResult.cpp  CollisionResult.hpp  DestroyRequest.cpp  DestroyRequest.hpp  Expirable.cpp  Expirable.hpp  Images.hpp  Input.cpp  Input.hpp  KeyboardInput.cpp  KeyboardInput.hpp  Movement.hpp  Player.cpp  Player.hpp  Projectile.cpp  Projectile.hpp  ShootRequest.cpp  ShootRequest.hpp  ShootingGalleryState.cpp  ShootingGalleryState.hpp  Sprite.hpp  Target.cpp  Target.hpp  Transform.hpp
src/game/ecs/systems/: CollisionResponseSystem.cpp  CollisionResponseSystem.hpp  CollisionSystem.cpp  CollisionSystem.hpp  DuckMovementSystem.cpp  DuckMovementSystem.hpp  EventSystem.cpp  EventSystem.hpp  ExpiredEntitiesSystem.cpp  ExpiredEntitiesSystem.hpp  GameStateSystem.cpp  GameStateSystem.hpp  MovementSystem.hpp  MovementWithBounceSystem.hpp  PlayerControlSystem.cpp  PlayerControlSystem.hpp  ProjectileSystem.cpp  ProjectileSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  TargetSpawnSystem.cpp  TargetSpawnSystem.hpp  UIEventSystem.cpp  UIEventSystem.hpp
src/game/events/: Event.cpp  Event.hpp  EventListener.hpp  EventManager.cpp  EventManager.hpp  KeyboardEvent.cpp  KeyboardEvent.hpp
src/game/resources/: Image.cpp  Image.hpp  ResourceManager.cpp  ResourceManager.hpp
src/game/ui/: DebugOverlay.cpp  DebugOverlay.hpp  GameHUD.cpp  GameHUD.hpp  HUD.cpp  HUD.hpp  TextRenderer.cpp  TextRenderer.hpp
src/main/: main.cpp
src/test/: BehaviorTest.cpp  CMakeLists.txt  EventTest.cpp  GameWorldTest.cpp  TimerTest.cpp  test_gameobject.cpp  test_hud.cpp  test_timer.cpp
